# aptrepo

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  aptclient.cpp  aptrepo.cpp
docs/: CMakeLists.txt  mainpage.md
include/aptrepo/: aptrepo.hpp  reference.hpp  release.hpp
include/aptrepo/internal/: downloads.hpp  utils.hpp
reqs/req/: REQ001.yml
src/: CMakeLists.txt  aptrepo.cpp  downloads.cpp  libaptrepo.cpp  reference.cpp  release.cpp  utils.cpp
tests/: CMakeLists.txt  testaptrepo.cpp  testlibaptrepo.cpp
